--- a/robot_run.service
+++ b/robot_run.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Robot Run Service
-After=network.target
+After=network-online.target
+Wants=network-online.target
 StartLimitIntervalSec=0
 
 [Service]
@@ -8,6 +9,7 @@ Type=simple
 Restart=always
 RestartSec=1
 User=team195
+ExecStartPre=/robot/ros_scripts/prestart_robot.sh
 ExecStart=/robot/ros_scripts/start_robot.sh
 ExecStop=/robot/ros_scripts/stop_robot.sh
 
